--- a/index.html
+++ b/index.html
@@ -5,73 +5,205 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Russia</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="pages/index.css">
 </head>
 
-<body class="b-content">
+<body class="body">
     <div class="page">
         <header class="header">
-            <div class="header-logo"></div>
-            <span class="header-lang">RU EN</span>
+            <div class="header__logo"></div>
+            <span class="header__lang">RU EN</span>
         </header>
         <main>
             <section class="lead">
-                <h1 class="lead-title">Путешествия по России</h1>
-                <p class="lead-subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <img src="img/__image.png" class="lead-image" alt="Девушка в поезде">
-                <p class="lead-caption">ваша полка - верхняя</p>
+                <h1 class="lead__title">Путешествия по России</h1>
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+                <img src="img/__image.png" class="lead__image" alt="Девушка в поезде">
+                <p class="lead__caption">ваша полка - верхняя</p>
             </section>
             <section class="intro">
-                <h2 class="intro-title">Чего мы там не видели?</h2>
-                <p class="intro-text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+                <h2 class="intro__title">Чего мы там не видели?</h2>
+                <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
+                    планируют
                     провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это
-                    целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё
-                    увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как,
+                    целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А
+                    ещё
+                    увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов.
+                    Как,
                     например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в
                     свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые
                     интересные места, достойные вашего отпуска.</p>
-                <ul class="intro-list">
-                    <li class="intro-list-item">Часовых поясов 11</li>
-                    <li class="intro-list-item">Объектов природного наследия ЮНЕСКО 12</li>
-                    <li class="intro-list-item">Объектов культурного наследия ЮНЕСКО 16</li>
-                    <li class="intro-list-item">Природных заповедников 105</li>
-                    <li class="intro-list-item">Аэропортов 241</li>
+                <ul class="intro__list">
+                    <li class="intro__list-item">Часовых поясов 11</li>
+                    <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
+                    <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
+                    <li class="intro__list-item">Природных заповедников 105</li>
+                    <li class="intro__list-item">Аэропортов 241</li>
                 </ul>
             </section>
             <section class="photo-grid">
-                <img src="img/item1.png" class="photo-grid-item" alt="">
-                <img src="img/item2.png" class="photo-grid-item" alt="">
-                <img src="img/item3.png" class="photo-grid-item" alt="">
-                <img src="img/item4.png" class="photo-grid-item" alt="">
-                <img src="img/item5.png" class="photo-grid-item" alt="">
-                <img src="img/item6.png" class="photo-grid-item" alt="">
-                <img src="img/item7.png" class="photo-grid-item" alt="">
-                <img src="img/item8.png" class="photo-grid-item" alt="">
-                <img src="img/item9.png" class="photo-grid-item" alt="">
-                <img src="img/item10.png" class="photo-grid-item" alt="">
-                <img src="img/item11.png" class="photo-grid-item" alt="">
-                <img src="img/item12.png" class="photo-grid-item" alt="">
+                <img class="photo-grid__item" src="/img/item1.png" alt="picture">
+                <img class="photo-grid__item" src="/img/item2.png" alt="picture">
+                <img class="photo-grid__item" src="/img/item3.png" alt="picture">
+                <img class="photo-grid__item" src="/img/item4.png" alt="picture">
+                <img class="photo-grid__item" src="/img/item5.png" alt="picture">
+                <img class="photo-grid__item" src="/img/item6.png" alt="picture">
+                <img class="photo-grid__item" src="/img/item7.png" alt="picture">
+                <img class="photo-grid__item" src="/img/item8.png" alt="picture">
+                <img class="photo-grid__item" src="/img/item9.png" alt="picture">
+                <img class="photo-grid__item" src="/img/item10.png" alt="picture">
+                <img class="photo-grid__item" src="/img/item11.png" alt="picture">
+                <img class="photo-grid__item" src="/img/item12.png" alt="picture">
             </section>
             <section class="places">
-                <div>
-                    <h2 class="place-title">Куршская коса</h2>
-                    <img src="img/image1.png" class="place-image" alt="" title="Куршская коса">
+                <div class="places__place">
+                    <div class="places__flex-row">
+                        <h2 class="places__title">Куршская коса</h2>
+                        <div class="places__website">
+                            <p class="places__url-heading">URL</p>
+                            <a href="park-kosa.ru" class="places__link">park-kosa.ru</a>
+                        </div>
                     </div>
-                    <div>
-                    <p class="place-url-heading">URL</p>
-                    <a href="park-kosa.ru" class="place-link">park-kosa.ru</a>
-                    <p class="place-paragraph1"> Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
-                        спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
-                        Уникальная природная зона на краю российского анклава.</p>
-                    <p class="place-paragraph1">На этом Калининградская область не заканчивается. Для путешественника и
-                        исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
-                        наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
-                        спокойствие природы и запах стального, прохладного моря.</p>
+                    <div class="places__flex-row">
+                        <img src="img/image1.png" class="places__image" alt="Куршская коса" title="Куршская коса">
+                        <div class="places__paragraph">
+                            <p class="places__text"> Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
+                                водных
+                                горизонта —
+                                спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
+                                моря с
+                                другой.
+                                Уникальная природная зона на краю российского анклава.</p>
+                            <p class="places__text">На этом Калининградская область не заканчивается. Для
+                                путешественника и
+                                исследователя там же по соседству — самая западная точка России, Балтийская коса, —
+                                и
+                                немецкое
+                                наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает
+                                суету,
+                                окуная в
+                                спокойствие природы и запах стального, прохладного моря.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="places__place">
+                    <div class="places__flex-row">
+                        <h2 class="places__title">Кольский</h2>
+                        <div class="places__website">
+                            <p class="places__url-heading">URL</p>
+                            <a href="park-kosa.ru" class="places__link">National Geographic</a>
+                        </div>
+                    </div>
+                    <div class="places__flex-row">
+                        <img src="img/kolskiy.png" class="places__image" alt="Кольский" title="Кольский">
+                        <div class="places__paragraph">
+                            <p class="places__text"> Почти весь полуостров находится за Полярным кругом. Саамская
+                                тундра, от которой на юг —
+                                тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+                            <p class="places__text">Возможно, вы смотрели Звягинцева и даже слышали историю
+                                арктического
+                                фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных
+                                воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей
+                                земную
+                                кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша
+                                мечта
+                                увидеть северное сияние начинает сбываться с билетом
+                                в Мурманск.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="places__place">
+                    <div class="places__flex-row">
+                        <h2 class="places__title">Алтай</h2>
+                        <div class="places__website">
+                            <p class="places__url-heading">URL</p>
+                            <a href="" class="places__link">YouTube</a>
+                        </div>
+                    </div>
+                    <div class="places__flex-row">
+                        <img src="img/Altai.png" class="places__image" alt="Алтай" title="Алтай">
+                        <div class="places__paragraph">
+                            <p class="places__text"> Алтай — одно из красивейших мест в России.
+                                В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
+                                соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете
+                                познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
+                            <p class="places__text">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
+                                Так
+                                вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над
+                                хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже
+                                обитатели
+                                Алтайского края.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="places__place">
+                    <div class="places__flex-row">
+                        <h2 class="places__title">Зимний Байкал</h2>
+                        <div class="places__website">
+                            <p class="places__url-heading">URL</p>
+                            <a href="" class="places__link">https://vk.com/baikalmile</a>
+                        </div>
+                    </div>
+                    <div class="places__flex-row">
+                        <img src="img/WinterBaikal.png" class="places__image" alt="Зимний Байкал" title="Зимний Байкал">
+                        <div class="places__paragraph">
+                            <p class="places__text"> Всем известен Байкал как крупнейшее озеро
+                                в мире. Многие также знают, что это самый большой источник пресной воды и одно из
+                                красивейших мест в России.</p>
+                            <p class="places__text">Конечно, это всё так. Но Байкал ещё идеальное место
+                                для соревнований
+                                по скийорингу. Это такой вид спорта, когда лыжник привязывает себя
+                                к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте
+                                2019
+                                года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="places__place">
+                    <div class="places__flex-row">
+                        <h2 class="places__title">Карелия</h2>
+                        <div class="places__website">
+                            <p class="places__url-heading">URL</p>
+                            <a href="" class="places__link">http://vodlozero.ru/</a>
+                        </div>
+                    </div>
+                    <div class="places__flex-row">
+                        <img src="img/Karelia.png" class="places__image" alt="Карелия" title="Карелия">
+                        <div class="places__paragraph">
+                            <p class="places__text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+                                сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30
+                                метров — леса карельских национальных парков из-за непроходимых болот никогда не
+                                знали
+                                топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому
+                                существу,
+                                видевшему солнце раньше, чем увидал его Иван Грозный.
+                                В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках
+                                деревья
+                                в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </section>
+            <section class="cover">
+                <div class="cover__overlay"></div>
+                <h3 class="cover__title">До Байкала «на собаках» </h3>
+                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до
+                    Байкала
+                    на
+                    электричках.</p>
+            </section>
         </main>
-        <footer>
-
+        <footer class="footer">
+            <div class="footer__link">
+                <a href="#">Карты</a>
+                <a href="#">Погода</a>
+                <a href="#">Расписание</a>
+                <a href="#">Календарь</a>
+                <a href="#">Путешествия</a>
+            </div>
+            <span class="footer__copyright">© 2020. Впишите своё имя</span>
         </footer>
     </div>
 </body>
