--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p class="leadSubtitle">
           Настоящая страна не в выпусках новостей, а здесь.
         </p>
-        <img src="img/__image.png" class="leadImage" alt="Девушка в поезде" />
+        <img src="./img/image.png" class="leadImage" alt="Девушка в поезде" />
         <p class="leadCaption">ваша полка - верхняя</p>
       </section>
       <section class="intro">
@@ -50,18 +50,18 @@
         </ul>
       </section>
       <section class="photo-grid">
-        <img class="photo-gridItem" src="/img/item1.png" alt="picture" />
-        <img class="photo-gridItem" src="/img/item2.png" alt="picture" />
-        <img class="photo-gridItem" src="/img/item3.png" alt="picture" />
-        <img class="photo-gridItem" src="/img/item4.png" alt="picture" />
-        <img class="photo-gridItem" src="/img/item5.png" alt="picture" />
-        <img class="photo-gridItem" src="/img/item6.png" alt="picture" />
-        <img class="photo-gridItem" src="/img/item7.png" alt="picture" />
-        <img class="photo-gridItem" src="/img/item8.png" alt="picture" />
-        <img class="photo-gridItem" src="/img/item9.png" alt="picture" />
-        <img class="photo-gridItem" src="/img/item10.png" alt="picture" />
-        <img class="photo-gridItem" src="/img/item11.png" alt="picture" />
-        <img class="photo-gridItem" src="/img/item12.png" alt="picture" />
+        <img class="photo-gridItem" src="./img/item1.png" alt="picture" />
+        <img class="photo-gridItem" src="./img/item2.png" alt="picture" />
+        <img class="photo-gridItem" src="./img/item3.png" alt="picture" />
+        <img class="photo-gridItem" src="./img/item4.png" alt="picture" />
+        <img class="photo-gridItem" src="./img/item5.png" alt="picture" />
+        <img class="photo-gridItem" src="./img/item6.png" alt="picture" />
+        <img class="photo-gridItem" src="./img/item7.png" alt="picture" />
+        <img class="photo-gridItem" src="./img/item8.png" alt="picture" />
+        <img class="photo-gridItem" src="./img/item9.png" alt="picture" />
+        <img class="photo-gridItem" src="./img/item10.png" alt="picture" />
+        <img class="photo-gridItem" src="./img/item11.png" alt="picture" />
+        <img class="photo-gridItem" src="./img/item12.png" alt="picture" />
       </section>
       <section class="places">
         <div class="placesPlace">
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="placesFlex-row">
-            <img src="img/image1.png" class="placesImage" alt="Куршская коса" title="Куршская коса" />
+            <img src="./img/image1.png" class="placesImage" alt="Куршская коса" title="Куршская коса" />
             <div class="placesParagraph">
               <p class="placesText">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
@@ -101,7 +101,7 @@
             </div>
           </div>
           <div class="placesFlex-row">
-            <img src="img/kolskiy.png" class="placesImage" alt="Кольский" title="Кольский" />
+            <img src="./img/kolskiy.png" class="placesImage" alt="Кольский" title="Кольский" />
             <div class="placesParagraph">
               <p class="placesText">
                 Почти весь полуостров находится за Полярным кругом. Саамская
@@ -129,7 +129,7 @@
             </div>
           </div>
           <div class="placesFlex-row">
-            <img src="img/Altai.png" class="placesImage" alt="Алтай" title="Алтай" />
+            <img src="./img/Altai.png" class="placesImage" alt="Алтай" title="Алтай" />
             <div class="placesParagraph">
               <p class="placesText">
                 Алтай — одно из красивейших мест в России. В первую очередь
@@ -157,7 +157,7 @@
             </div>
           </div>
           <div class="placesFlex-row">
-            <img src="img/WinterBaikal.png" class="placesImage" alt="Зимний Байкал" title="Зимний Байкал" />
+            <img src="./img/WinterBaikal.png" class="placesImage" alt="Зимний Байкал" title="Зимний Байкал" />
             <div class="placesParagraph">
               <p class="placesText">
                 Всем известен Байкал как крупнейшее озеро в мире. Многие также
@@ -184,7 +184,7 @@
             </div>
           </div>
           <div class="placesFlex-row">
-            <img src="img/Karelia.png" class="placesImage" alt="Карелия" title="Карелия" />
+            <img src="./img/Karelia.png" class="placesImage" alt="Карелия" title="Карелия" />
             <div class="placesParagraph">
               <p class="placesText">
                 Сибирь заканчивается не на Урале, а в Карелии: образующая
