--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <a href="#">Календарь</a>
       <a href="#">Путешествия</a>
     </div>
-    <p class="footerCopyright">© 2020. Впишите своё имя</p>
+    <p class="footerCopyright">© 2023. Nikita Korobkin</p>
   </footer>
   </div>
 </body>
